# HomeAssignments

./: 1  Makefile  README.md  greet.cpp  main  main.cpp
Assignment1/: greet.h
Assignment2/: README.md  check.cpp  head.h  main.cpp  open.cpp
Assignment2a/: Makefile  README.md  check.cpp  head.h  main.cpp  open.cpp  size.cpp
Assignment2b/: Makefile  README.md  calculatorPL.cpp  head.h  main.cpp
Assignment3/: Bumblebee.cpp  Bumblebee.h  Makefile  Megatron.cpp  Megatron.h  OptimusPrime.cpp  OptimusPrime.h  README.md  Transformer.cpp  Transformer.h  Weapon.cpp  Weapon.h  head.h  main.cpp  test.cpp
Assignment3/test/: transformer_test.cpp
Assignment3111/: Makefile  Megatron.h  OptimusPrime.h  README.md  Weapon.cpp  Weapon.h  main.cpp  test.cpp
Assignment4/: Autobot.cpp  Bumblebee.cpp  Bumblebee.h  CMakeLists.txt  Makefile  Megatron.cpp  Megatron.h  OptimusPrime.cpp  OptimusPrime.h  README.md  Transformer.cpp  Transformer.h  Vehicle.cpp  Vehicle.h  Weapon.cpp  Weapon.h  main.cpp  test.cpp
Assignment5/: Autobot.cpp  Autobot.h  Bumblebee.cpp  Decepticon.cpp  Decepticon.h  Makefile  Megatron.cpp  Megatron.h  OptimusPrime.cpp  README.md  Transformer.cpp  Transformer.h  Vehicle.h  Weapon.cpp  Weapon.h  main.cpp  test.cpp
Assignment6/: Class_ftest.h  Makefile  MyClass.h  README.md  test.cpp
HELLO/: greet.cpp  greet.h
lab-work-1/: Makefile  README.md  bmp.cpp  bmp.h  head.h  image.cpp  image_processing.cpp  image_processing.h  main  main.cpp  open.h
lab-work-1/docs/: documentation.md  report.md
lab-work-1/github/workflows/: ci.yml
